# multiprocessing

./: CmakeLists.txt  LICENSE  Launcher.h  MemoryPool.h  Pipes.h  Product.h  README.md  RingQueue.h  Semaphore.h  SharedMemory.h  SharedMemoryBSD.h  SharedMemorySysV.h  SharedMemoryWin.h  SystemError.h  consumer.cpp  producer.cpp  test_queue.cpp
SorterThreads/: CMakeLists.txt  Consumer.cpp  Consumer.h  Producer.cpp  Producer.h  ProducerConsumer.cpp  ReadMe.md  SortItem.cpp  SortItem.h  Sorter.cpp  Sorter.h  Task.cpp  Task.h  ThreadPool.cpp  ThreadPool.h  generate.cpp  producer_consumer.cpp  sources.cmake
SorterThreads/test/: test_Consumer.cpp  test_Producer.cpp  test_SortItem.cpp  test_Sorter.cpp  test_Task.cpp  test_ThreadPool.cpp
docs/: AdjustTokenPrivileges.h  CreateFileMapping.txt  CreateMutex.h  CreateSemaphore.h  Mutex.h  Requirements.md  SharedMemory.h  SortProducerConsumer.txt
ignore/: AtomicRingQueue.h  CmakeLists.txt  stdio_client.cpp
pipes/: Pipes.h  stdio_server.cpp  test_dup.cpp
test/: Consumer.h  Producer.h  boost_shmem.cpp  consumer.cpp  pipe_io.cpp  producer.cpp  test_consumer.cpp  test_file_to_string.cpp  test_producer.cpp  test_ring_queue.cpp  test_std_queue.cpp
unix/: Launcher.h  Semaphore.h  SharedMemoryBSD.h  SharedMemorySysV.h
windows/: Launcher.h  Semaphore.h  SharedMemoryWin.h
